Fix Firefly nodes: seed array support and binary upload
- Updated seed field to accept comma-separated values (e.g., "1,2,3,4")
- Seed defaults to empty string and converts to [1] if not provided
- Fixed binary image upload in FireflyGenerativeExpandNodeV2
- Changed upload to use direct aiohttp session instead of JSON wrapper
- Updated max width/height to 3999 for expand node
- Added firefly_storage.py helper module for image uploads

--- a/firefly_config.json.template
+++ b/firefly_config.json.template
@@ -2,5 +2,5 @@
   "adobe_client_id": "YOUR_ADOBE_CLIENT_ID_HERE",
   "adobe_client_secret": "YOUR_ADOBE_CLIENT_SECRET_HERE",
   "adobe_api_key": "YOUR_ADOBE_API_KEY_HERE",
-  "note": "Fill in your Adobe Firefly API credentials. Get them from https://developer.adobe.com/console"
+  "note": "Fill in your Adobe Firefly API credentials from https://developer.adobe.com/console - images are automatically uploaded to Firefly's native storage"
 }
